Fix for unreadable text of selected element in Nemo inactive pane.
This theme change fixes the selected element being unreadable in the
Nemo inactive pane by having it inherit normal selected item background
color properties.

--- a/usr/share/themes/Mint-X/gtk-3.0/apps/nemo.css
+++ b/usr/share/themes/Mint-X/gtk-3.0/apps/nemo.css
@@ -14,3 +14,7 @@ NemoWindow .sidebar .view:selected {
 .nemo-inactive-pane .view {
     background-color: shade(@theme_base_color, 0.95);
 }
+
+.nemo-inactive-pane .view:selected {
+    background-color: @theme_selected_bg_color;
+}
